# rusty_sampler

./: .gitignore  Cargo.toml  README.md  package.json
apps/web-ui/: index.html  package-lock.json  package.json  vite.config.js
apps/web-ui/public/: _headers
apps/web-ui/src/: App.jsx  styles.css
apps/web-ui/src/wasm/: loadSampler.js  worklet-bindgen-entry.js
apps/web-ui/src/wasm/pkg/: .gitignore  package.json  sampler_web_wasm.d.ts  sampler_web_wasm.js  sampler_web_wasm_bg.wasm  sampler_web_wasm_bg.wasm.d.ts
apps/web-ui/src/wasm/pkg/snippets/sampler-web-wasm-56eb85e7a3a5eddd/: inline0.js
codex-skills/rusty-sampler-ui-verifier/: SKILL.md
codex-skills/rusty-sampler-ui-verifier/agents/: openai.yaml
codex-skills/rusty-sampler-ui-verifier/references/: prompt-recipes.md
crates/sampler-core/: Cargo.toml
crates/sampler-core/src/audio/: mod.rs  oscillator.rs  render.rs  sink.rs  source.rs  spec.rs
crates/sampler-web-wasm/: Cargo.toml
crates/sampler-web-wasm/src/: lib.rs
docs/: audio-worklet-shared-memory-notes.md
scripts/: build-cloudflare-pages.sh  build-web-wasm-shared.sh
