[package]
name = "sampler-web-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sampler-core = { path = "../sampler-core" }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "AudioContext",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "BaseAudioContext",
  "GainNode",
  "OscillatorNode",
  "OscillatorType"
]
